Rename customer nickname to login
