# accounts/src/main/java/org/vl4ds4m/banking/accounts/entity/Customer.java
@@ -4,11 +4,12 @@ import java.time.LocalDate;
 
 public record Customer(
 
-        String nickname,
+    String login,
 
-        String forename,
+    String forename,
 
-        String surname,
+    String surname,
 
-        LocalDate birthdate
+    LocalDate birthdate
+
 ) {}
